fix layout issue

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -54,14 +54,14 @@ hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; 
 
 #search-result-container {display:none}
 .search-result .thumbnail { border-radius: 0 !important; }
-.search-result:first-child { margin-top: 0 !important; }
 .search-result { margin-top: 20px; }
+.search-result:first-child { margin-top: 0 !important; }
 .search-result .col-md-2 { border-right: 1px dotted #ccc; min-height: 140px; }
 .search-result ul { padding-left: 0 !important; list-style: none;  }
 .search-result ul li { font: 400 normal .85em "Roboto",Arial,Verdana,sans-serif;  line-height: 30px; }
 .search-result ul li i { padding-right: 5px; }
 .search-result .col-md-7 { position: relative; }
-.search-result h3 { font: 500 normal 1.375em "Roboto",Arial,Verdana,sans-serif; margin-top: 0 !important; margin-bottom: 10px !important; }
+.search-result h3 { font: 500 normal 1.375em "Roboto",Arial,Verdana,sans-serif; margin-top: 0 !important; margin-bottom: 3px !important; }
 .search-result h3 > a, .search-result i { color: #248dc1 !important; }
 .search-result p { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; }
 .search-result span.plus { position: absolute; right: 0; top: 126px; }
@@ -95,13 +95,9 @@ hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; 
 
 #graph{
     display: none;
-    position: fixed;
-    margin-left: 40px;
-    margin-top: 70px;
     border: 1px solid #DBDBDB;
     border-radius: 5px;
-    width: 550px;
-    height: 650px;
+    height: 60px;
 }
 
 #innerGraph{
